kubernetes/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flappybird
  namespace: vunguye1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flappybird
  template:
    metadata:
      labels:
        app: flappybird
    spec:
      containers:
        - name: flappybird
          image: sevenajay/mario
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 12Mi
            limits:
              memory: 1Gi
