kubernetes/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: idk
  namespace: vunguye1
spec:
  type: ClusterIP
  selector:
    app: idk
  ports:
    - name: web
      port: 80
      targetPort: http
