kubernetes/http-route.yaml
# http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: 2048
  namespace: vunguye1
spec:
  parentRefs:
    - name: gke-gateway
      namespace: gateway
  hostnames:
    - 2048-vunguye1.s9n.no
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: 2048
          port: 80
